src/bindings.rs

extern "C" {
    pub fn iauGst06(uta: f64, utb: f64, tta: f64, ttb: f64, rnpb: *mut [f64; 3usize]) -> f64;
}
extern "C" {
    pub fn iauGst06a(uta: f64, utb: f64, tta: f64, ttb: f64) -> f64;
}
extern "C" {
    pub fn iauGst94(uta: f64, utb: f64) -> f64;
}
extern "C" {
    pub fn iauPvstar(
        pv: *mut [f64; 3usize],
        ra: *mut f64,
        dec: *mut f64,
        pmr: *mut f64,
        pmd: *mut f64,
        px: *mut f64,
        rv: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauStarpv(
        ra: f64,
        dec: f64,
        pmr: f64,
        pmd: f64,
        px: f64,
        rv: f64,
        pv: *mut [f64; 3usize],
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauFk425(
        r1950: f64,
        d1950: f64,
        dr1950: f64,
        dd1950: f64,
        p1950: f64,
        v1950: f64,
        r2000: *mut f64,
        d2000: *mut f64,
        dr2000: *mut f64,
        dd2000: *mut f64,
        p2000: *mut f64,
        v2000: *mut f64,
    );
}
extern "C" {
    pub fn iauFk45z(r1950: f64, d1950: f64, bepoch: f64, r2000: *mut f64, d2000: *mut f64);
}
extern "C" {
    pub fn iauFk524(
        r2000: f64,
        d2000: f64,
        dr2000: f64,
        dd2000: f64,
        p2000: f64,
        v2000: f64,
        r1950: *mut f64,
        d1950: *mut f64,
        dr1950: *mut f64,
        dd1950: *mut f64,
        p1950: *mut f64,
        v1950: *mut f64,
    );
}
extern "C" {
    pub fn iauFk52h(
        r5: f64,
        d5: f64,
        dr5: f64,
        dd5: f64,
        px5: f64,
        rv5: f64,
        rh: *mut f64,
        dh: *mut f64,
        drh: *mut f64,
        ddh: *mut f64,
        pxh: *mut f64,
        rvh: *mut f64,
    );
}
extern "C" {
    pub fn iauFk54z(
        r2000: f64,
        d2000: f64,
        bepoch: f64,
        r1950: *mut f64,
        d1950: *mut f64,
        dr1950: *mut f64,
        dd1950: *mut f64,
    );
}
extern "C" {
    pub fn iauFk5hip(r5h: *mut [f64; 3usize], s5h: *mut f64);
}
extern "C" {
    pub fn iauFk5hz(r5: f64, d5: f64, date1: f64, date2: f64, rh: *mut f64, dh: *mut f64);
}
extern "C" {
    pub fn iauH2fk5(
        rh: f64,
        dh: f64,
        drh: f64,
        ddh: f64,
        pxh: f64,
        rvh: f64,
        r5: *mut f64,
        d5: *mut f64,
        dr5: *mut f64,
        dd5: *mut f64,
        px5: *mut f64,
        rv5: *mut f64,
    );
}
extern "C" {
    pub fn iauHfk5z(
        rh: f64,
        dh: f64,
        date1: f64,
        date2: f64,
        r5: *mut f64,
        d5: *mut f64,
        dr5: *mut f64,
        dd5: *mut f64,
    );
}
extern "C" {
    pub fn iauStarpm(
        ra1: f64,
        dec1: f64,
        pmr1: f64,
        pmd1: f64,
        px1: f64,
        rv1: f64,
        ep1a: f64,
        ep1b: f64,
        ep2a: f64,
        ep2b: f64,
        ra2: *mut f64,
        dec2: *mut f64,
        pmr2: *mut f64,
        pmd2: *mut f64,
        px2: *mut f64,
        rv2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauEceq06(date1: f64, date2: f64, dl: f64, db: f64, dr: *mut f64, dd: *mut f64);
}
extern "C" {
    pub fn iauEcm06(date1: f64, date2: f64, rm: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauEqec06(date1: f64, date2: f64, dr: f64, dd: f64, dl: *mut f64, db: *mut f64);
}
extern "C" {
    pub fn iauLteceq(epj: f64, dl: f64, db: f64, dr: *mut f64, dd: *mut f64);
}
extern "C" {
    pub fn iauLtecm(epj: f64, rm: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauLteqec(epj: f64, dr: f64, dd: f64, dl: *mut f64, db: *mut f64);
}
extern "C" {
    pub fn iauG2icrs(dl: f64, db: f64, dr: *mut f64, dd: *mut f64);
}
extern "C" {
    pub fn iauIcrs2g(dr: f64, dd: f64, dl: *mut f64, db: *mut f64);
}
extern "C" {
    pub fn iauEform(n: ::std::os::raw::c_int, a: *mut f64, f: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauGc2gd(
        n: ::std::os::raw::c_int,
        xyz: *mut f64,
        elong: *mut f64,
        phi: *mut f64,
        height: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauGc2gde(
        a: f64,
        f: f64,
        xyz: *mut f64,
        elong: *mut f64,
        phi: *mut f64,
        height: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauGd2gc(
        n: ::std::os::raw::c_int,
        elong: f64,
        phi: f64,
        height: f64,
        xyz: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauGd2gce(
        a: f64,
        f: f64,
        elong: f64,
        phi: f64,
        height: f64,
        xyz: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauD2dtf(
        scale: *const ::std::os::raw::c_char,
        ndp: ::std::os::raw::c_int,
        d1: f64,
        d2: f64,
        iy: *mut ::std::os::raw::c_int,
        im: *mut ::std::os::raw::c_int,
        id: *mut ::std::os::raw::c_int,
        ihmsf: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauDat(
        iy: ::std::os::raw::c_int,
        im: ::std::os::raw::c_int,
        id: ::std::os::raw::c_int,
        fd: f64,
        deltat: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauDtdb(date1: f64, date2: f64, ut: f64, elong: f64, u: f64, v: f64) -> f64;
}
extern "C" {
    pub fn iauDtf2d(
        scale: *const ::std::os::raw::c_char,
        iy: ::std::os::raw::c_int,
        im: ::std::os::raw::c_int,
        id: ::std::os::raw::c_int,
        ihr: ::std::os::raw::c_int,
        imn: ::std::os::raw::c_int,
        sec: f64,
        d1: *mut f64,
        d2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTaitt(tai1: f64, tai2: f64, tt1: *mut f64, tt2: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTaiut1(
        tai1: f64,
        tai2: f64,
        dta: f64,
        ut11: *mut f64,
        ut12: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTaiutc(tai1: f64, tai2: f64, utc1: *mut f64, utc2: *mut f64)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTcbtdb(tcb1: f64, tcb2: f64, tdb1: *mut f64, tdb2: *mut f64)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTcgtt(tcg1: f64, tcg2: f64, tt1: *mut f64, tt2: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTdbtcb(tdb1: f64, tdb2: f64, tcb1: *mut f64, tcb2: *mut f64)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTdbtt(
        tdb1: f64,
        tdb2: f64,
        dtr: f64,
        tt1: *mut f64,
        tt2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTttai(tt1: f64, tt2: f64, tai1: *mut f64, tai2: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTttcg(tt1: f64, tt2: f64, tcg1: *mut f64, tcg2: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTttdb(
        tt1: f64,
        tt2: f64,
        dtr: f64,
        tdb1: *mut f64,
        tdb2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTtut1(
        tt1: f64,
        tt2: f64,
        dt: f64,
        ut11: *mut f64,
        ut12: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauUt1tai(
        ut11: f64,
        ut12: f64,
        dta: f64,
        tai1: *mut f64,
        tai2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauUt1tt(
        ut11: f64,
        ut12: f64,
        dt: f64,
        tt1: *mut f64,
        tt2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauUt1utc(
        ut11: f64,
        ut12: f64,
        dut1: f64,
        utc1: *mut f64,
        utc2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauUtctai(utc1: f64, utc2: f64, tai1: *mut f64, tai2: *mut f64)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauUtcut1(
        utc1: f64,
        utc2: f64,
        dut1: f64,
        ut11: *mut f64,
        ut12: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAe2hd(az: f64, el: f64, phi: f64, ha: *mut f64, dec: *mut f64);
}
extern "C" {
    pub fn iauHd2ae(ha: f64, dec: f64, phi: f64, az: *mut f64, el: *mut f64);
}
extern "C" {
    pub fn iauHd2pa(ha: f64, dec: f64, phi: f64) -> f64;
}
extern "C" {
    pub fn iauTpors(
        xi: f64,
        eta: f64,
        a: f64,
        b: f64,
        a01: *mut f64,
        b01: *mut f64,
        a02: *mut f64,
        b02: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTporv(
        xi: f64,
        eta: f64,
        v: *mut f64,
        v01: *mut f64,
        v02: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTpsts(xi: f64, eta: f64, a0: f64, b0: f64, a: *mut f64, b: *mut f64);
}
extern "C" {
    pub fn iauTpstv(xi: f64, eta: f64, v0: *mut f64, v: *mut f64);
}
extern "C" {
    pub fn iauTpxes(
        a: f64,
        b: f64,
        a0: f64,
        b0: f64,
        xi: *mut f64,
        eta: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTpxev(
        v: *mut f64,
        v0: *mut f64,
        xi: *mut f64,
        eta: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauA2af(
        ndp: ::std::os::raw::c_int,
        angle: f64,
        sign: *mut ::std::os::raw::c_char,
        idmsf: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn iauA2tf(
        ndp: ::std::os::raw::c_int,
        angle: f64,
        sign: *mut ::std::os::raw::c_char,
        ihmsf: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn iauAf2a(
        s: ::std::os::raw::c_char,
        ideg: ::std::os::raw::c_int,
        iamin: ::std::os::raw::c_int,
        asec: f64,
        rad: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAnp(a: f64) -> f64;
}
extern "C" {
    pub fn iauAnpm(a: f64) -> f64;
}
extern "C" {
    pub fn iauD2tf(
        ndp: ::std::os::raw::c_int,
        days: f64,
        sign: *mut ::std::os::raw::c_char,
        ihmsf: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn iauTf2a(
        s: ::std::os::raw::c_char,
        ihour: ::std::os::raw::c_int,
        imin: ::std::os::raw::c_int,
        sec: f64,
        rad: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauTf2d(
        s: ::std::os::raw::c_char,
        ihour: ::std::os::raw::c_int,
        imin: ::std::os::raw::c_int,
        sec: f64,
        days: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauRx(phi: f64, r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauRy(theta: f64, r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauRz(psi: f64, r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauCp(p: *mut f64, c: *mut f64);
}
extern "C" {
    pub fn iauCpv(pv: *mut [f64; 3usize], c: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauCr(r: *mut [f64; 3usize], c: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauP2pv(p: *mut f64, pv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPv2p(pv: *mut [f64; 3usize], p: *mut f64);
}
extern "C" {
    pub fn iauIr(r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauZp(p: *mut f64);
}
extern "C" {
    pub fn iauZpv(pv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauZr(r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauRxr(a: *mut [f64; 3usize], b: *mut [f64; 3usize], atb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauTr(r: *mut [f64; 3usize], rt: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauRxp(r: *mut [f64; 3usize], p: *mut f64, rp: *mut f64);
}
extern "C" {
    pub fn iauRxpv(r: *mut [f64; 3usize], pv: *mut [f64; 3usize], rpv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauTrxp(r: *mut [f64; 3usize], p: *mut f64, trp: *mut f64);
}
extern "C" {
    pub fn iauTrxpv(r: *mut [f64; 3usize], pv: *mut [f64; 3usize], trpv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauRm2v(r: *mut [f64; 3usize], w: *mut f64);
}
extern "C" {
    pub fn iauRv2m(w: *mut f64, r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPap(a: *mut f64, b: *mut f64) -> f64;
}
